--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "jsonresume-theme-elegant": "^1.16.1",
     "jsonresume-theme-even": "^0.12.0",
+    "jsonresume-theme-kendall": "^0.2.0",
     "puppeteer": "^10.2.0",
     "puppeteer-firefox": "^0.5.1",
     "resume-cli": "^3.0.5"
